--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,29 +27,25 @@ set(ADLB_SRC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 # Define adlb::adlb target
 #
-set(sources 
+add_library(adlb
     ${ADLB_SRC_PATH}/adlb.c
     ${ADLB_SRC_PATH}/xq.c)
-set(headers 
-    ${ADLB_INCLUDE_PATH}/adlb/adlb.h
-    ${ADLB_INCLUDE_PATH}/adlb/xq.h)
-add_library(adlb ${sources})
 add_library(adlb::adlb ALIAS adlb)
-set_property(TARGET adlb PROPERTY PUBLIC_HEADER ${headers})
+set_property(TARGET adlb
+    PROPERTY PUBLIC_HEADER ${ADLB_INCLUDE_PATH}/adlb/adlb.h)
 target_include_directories(adlb PUBLIC ${ADLB_INCLUDE_PATH})
 target_link_libraries(adlb PUBLIC MPI::MPI_C)
 
 if(ADLB_ENABLE_FORTRAN)
-    FortranCInterface_HEADER(${CMAKE_CURRENT_BINARY_DIR}/fortran_c_mangling.h MACRO_NAMESPACE "ADLB_FC_")
+    FortranCInterface_HEADER(
+        ${CMAKE_CURRENT_BINARY_DIR}/fortran_c_mangling.h
+        MACRO_NAMESPACE "ADLB_FC_")
     # Define adlb::adlb_fortran target
     #
-    set(sources 
-        ${ADLB_SRC_PATH}/adlbf.c)
-    set(headers 
-        ${ADLB_INCLUDE_PATH}/adlb/adlbf.h)
-    add_library(adlb_fortran ${sources})
+    add_library(adlb_fortran ${ADLB_SRC_PATH}/adlbf.c)
     add_library(adlb::adlb_fortran ALIAS adlb_fortran)
-    set_property(TARGET adlb_fortran PROPERTY PUBLIC_HEADER ${headers})
+    set_property(TARGET adlb_fortran 
+        PROPERTY PUBLIC_HEADER ${ADLB_INCLUDE_PATH}/adlb/adlbf.h)
     target_include_directories(adlb_fortran
         PUBLIC ${ADLB_INCLUDE_PATH}
         PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
