Streamline example targets generation

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,48 +1,34 @@
-add_executable(tsp tsp.c)
-target_link_libraries(tsp PRIVATE adlb::adlb)
+set(examples_c
+    tsp.c
+    nq.c
+    batcher.c
+    stats.c
+    sudoku.c
+    pmcmc.c
+    model.c
+    c1.c
+    c2.c
+    c3.c
+    c4.c
+    skel.c
+    add2.c
+)
 
-add_executable(nq nq.c)
-target_link_libraries(nq PRIVATE adlb::adlb)
+set(examples_fortran
+    fbatcher.f
+    f1.f
+)
 
-add_executable(batcher batcher.c)
-target_link_libraries(batcher PRIVATE adlb::adlb)
-
-add_executable(stats stats.c)
-target_link_libraries(stats PRIVATE adlb::adlb)
-
-add_executable(sudoku sudoku.c)
-target_link_libraries(sudoku PRIVATE adlb::adlb)
-
-add_executable(pmcmc pmcmc.c)
-target_link_libraries(pmcmc PRIVATE adlb::adlb)
-
-add_executable(model model.c)
-target_link_libraries(model PRIVATE adlb::adlb)
-
-add_executable(c1 c1.c)
-target_link_libraries(c1 PRIVATE adlb::adlb)
-
-add_executable(c2 c2.c)
-target_link_libraries(c2 PRIVATE adlb::adlb)
-
-add_executable(c3 c3.c)
-target_link_libraries(c3 PRIVATE adlb::adlb)
-
-add_executable(c4 c4.c)
-target_link_libraries(c4 PRIVATE adlb::adlb)
-
-add_executable(skel skel.c)
-target_link_libraries(skel PRIVATE adlb::adlb)
-
-add_executable(add2 add2.c)
-target_link_libraries(add2 PRIVATE adlb::adlb)
+foreach(example_source IN LISTS examples_c)
+    string(REGEX REPLACE "\\.[^.]*$" "" example_target ${example_source})
+    add_executable(${example_target} ${example_source})
+    target_link_libraries(${example_target} PRIVATE adlb::adlb m)
+endforeach()
 
 if(ADLB_ENABLE_FORTRAN)
-    add_executable(fbatcher fbatcher.f)
-    target_link_libraries(fbatcher
-        PRIVATE adlb::adlb_fortran MPI::MPI_Fortran)
-
-    add_executable(f1 f1.f)
-    target_link_libraries(f1
-        PRIVATE adlb::adlb_fortran MPI::MPI_Fortran)
+    foreach(example_source IN LISTS examples_fortran)
+        string(REGEX REPLACE "\\.[^.]*$" "" example_target ${example_source})
+        add_executable(${example_target} ${example_source})
+        target_link_libraries(${example_target} PRIVATE adlb::adlb_fortran MPI::MPI_Fortran)
+    endforeach()
 endif()
